# learn-clicktyper-automation

./: .gitignore  .pre-commit-config.yaml  DEVELOPER_GUIDE.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml  sample.txt  setup.cfg
examples/: README.md  example_code.py  python_info.txt
src/learn_cli/: __init__.py  click_app.py  typer_app.py
src/learn_clicktyper_automation/: __init__.py
tests/: __init__.py  test_cli.py
