[project]
name = "learn-clicktyper-automation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "FATESAIKOU", email = "qzsecftbhhhh@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "typer>=0.16.0",
]

[project.scripts]
learn-clicktyper-automation = "learn_clicktyper_automation:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
